Fixed the issue [GAT-BFW006-43] [People Plugin] Last visible sorting item option is cut-off #333 in content section.

--- a/control/content/css/content.app.css
+++ b/control/content/css/content.app.css
@@ -258,3 +258,7 @@ top: 8px;
     border-color: #faebcc;
     color: #8a6d3b;
 }
+
+.dropdown-menu{
+    max-height: 140px !important;
+}
